# RadiObject

./: .gitignore  CLAUDE.md  LICENSE  Layout.md  Lexicon.md  Performance.md  ReadMe.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml
assets/benchmark/: benchmark_default.ipynb  benchmark_large_batch.ipynb  benchmark_large_patch.ipynb  benchmark_results.json
benchmarks/: README.md  config.py  framework_benchmark.ipynb  framework_benchmark_executed.ipynb  run_benchmarks.py  run_experiments.py
benchmarks/experiments/: 01_storage_format_analysis.ipynb  02_chunked_format_deep_dive.ipynb  02_tiledb_deep_dive.ipynb  03_framework_comparison.ipynb  04_ml_dataloader_throughput.ipynb  05_call_tree_profiling.ipynb  __init__.py
benchmarks/infrastructure/: __init__.py  profiler.py  storage.py  visualization.py
benchmarks/results/: CHANGELOG.md
docs/: API.md  BENCHMARKS.md  CONTEXT.md  CONTRIBUTING.md  DATASETS.md  DATA_ACCESS.md  DESIGN.md  LAYOUT.md  LEXICON.md  ML_INTEGRATION.md  PERFORMANCE.md  S3_SETUP.md  index.md
docs/api/: ctx.md  dataframe.md  ml.md  query.md  radi_object.md  stats.md  volume.md  volume_collection.md
docs/explanation/: architecture.md  index.md  ml-architecture.md  performance-analysis.md  performance.md  threading-model.md
docs/how-to/: access-data.md  append-data.md  cloud-setup.md  contributing.md  datasets.md  index.md  ingest-data.md  lazy-queries.md  ml-training.md  pipelines.md  profiling.md  query-filter-data.md  s3-setup.md  streaming-writes.md  troubleshooting.md  tuning-concurrency.md  volume-operations.md  working-with-metadata.md
docs/reference/: benchmarks.md  configuration.md  datasets.md  index.md  layout.md  lexicon.md
docs/tutorials/: index.md
ml/: __init__.py  config.py  distributed.py  factory.py  reader.py
ml/datasets/: __init__.py  multimodal.py  patch_dataset.py  volume_dataset.py
ml/transforms/: __init__.py
ml/utils/: __init__.py  worker_init.py
notebooks/: 00_ingest_brats.ipynb  01_explore_data.ipynb  01_radi_object.ipynb  02_configuration.ipynb  02_volume_collection.ipynb  03_ingest_msd.ipynb  03_volume.ipynb  04_configuration.ipynb  04_ml_training.ipynb  04_storage_configuration.ipynb  05_ingest_msd.ipynb  05_ingest_msd_executed.ipynb  06_ml_training.ipynb  06_ml_training_executed.ipynb  README.md  config.py  framework_benchmark.ipynb  scratch.md
scripts/: download_dataset.py  download_tutorial_data.py  train_debug.py  verify_obs_meta.py
src/: dataframe.py  imaging_metadata.py  orientation.py  parallel.py  query.py  radi_object.py  streaming.py  utils.py  volume.py  volume_collection.py
src/radiobject/: __init__.py  _types.py  ctx.py  dataframe.py  exceptions.py  imaging_metadata.py  indexing.py  ingest.py  orientation.py  parallel.py  query.py  radi_object.py  stats.py  streaming.py  utils.py  volume.py  volume_collection.py  writers.py
src/radiobject/ml/: __init__.py  cache.py  config.py  distributed.py  factory.py  reader.py
src/radiobject/ml/compat/: __init__.py  torchio.py
src/radiobject/ml/datasets/: __init__.py  collection_dataset.py  multimodal.py  patch_dataset.py  segmentation_dataset.py  volume_dataset.py
src/radiobject/ml/transforms/: __init__.py  intensity.py  spatial.py
src/radiobject/ml/utils/: __init__.py  labels.py  validation.py  worker_init.py
test/: conftest.py  test_append.py  test_dataframe.py  test_from_images.py  test_from_niftis.py  test_imaging_metadata.py  test_indexing.py  test_ingest.py  test_obs_validation.py  test_orientation.py  test_parallel.py  test_performance_regression.py  test_query.py  test_radi_object.py  test_resample.py  test_stats.py  test_streaming.py  test_threading_investigation.py  test_utils.py  test_volume.py  test_volume_collection.py  test_writers.py
test/ml/: __init__.py  conftest.py  test_compat.py  test_dataset.py  test_distributed.py  test_performance.py  test_reader.py  test_segmentation_dataset.py  test_threading_ml.py  test_training.py  test_transforms.py
