[project]
name = "radiobject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tiledb>=0.36.0",
    "nibabel>=5.2.0",
    "pydicom>=2.4.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "matplotlib>=3.10.8",
    "psutil>=7.2.2",
    "boto3>=1.34.0",
    "botocore[crt]>=1.42.36",
]

[project.optional-dependencies]
download = [
    "boto3>=1.34.0",
    "requests>=2.31.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
    "pandas>=2.0.0",
]
ml = [
    "torch>=2.0.0",
    "monai>=1.3.0",
    "torchio>=0.19.0",
    "tcia-utils>=0.5.0",
    "scikit-learn>=1.3.0",
    "psutil>=7.2.2",
    "pandas>=2.0.0",
    "simpleitk>=2.3.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nbconvert>=7.16.6",
    "monai>=1.3.0",
    "torchio>=0.19.0",
    "simpleitk>=2.3.0",
    "torch>=2.0.0",
    "pandas>=2.0.0",
    "boto3>=1.34.0",
    "tqdm>=4.66.0",
    "pytest>=9.0.2",
]
