[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/radiobject"]

[project]
name = "radiobject"
version = "0.1.0"
description = "TileDB-backed data structure for radiology data at scale"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Samuel D'Souza" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "tiledb>=0.36.0",
    "nibabel>=5.2.0",
    "pydicom>=2.4.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "matplotlib>=3.10.8",
    "psutil>=7.2.2",
    "boto3>=1.34.0",
    "botocore[crt]>=1.42.36",
]

[project.optional-dependencies]
download = [
    "requests>=2.31.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
    "pandas>=2.0.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.16.6",
    "tqdm>=4.66.0",
]
ml = [
    "torch>=2.0.0",
    "monai>=1.3.0",
    "torchio>=0.19.0",
    "tcia-utils>=0.5.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "simpleitk>=2.3.0",
]

[project.urls]
Repository = "https://github.com/samueldsouza/radiobject"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
