[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/radiobject"]

[project]
name = "radiobject"
version = "0.1.1"
description = "TileDB-backed data structure for radiology data at scale"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Samuel D'Souza" },
]
keywords = ["radiology", "medical-imaging", "tiledb", "dicom", "nifti", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "tiledb>=0.36.0",
    "nibabel>=5.2.0",
    "pydicom>=2.4.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "matplotlib>=3.8.0",
    "psutil>=5.9.0",
    "boto3>=1.34.0",
    "botocore[crt]>=1.42.36",
    "tqdm>=4.66.0",
    "scipy>=1.17.0",
]

[project.optional-dependencies]
download = [
    "requests>=2.31.0",
    "tcia-utils>=0.5.0",
    "kaggle>=1.6.0",
    "python-dotenv>=1.0.0",
]
tutorials = [
    "radiobject[download]",
    "jupyter>=1.1.1",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.16.6",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-jupyter>=0.24.0",
]
monai = [
    "torch>=2.0.0",
    "monai>=1.3.0",
]
torchio = [
    "torch>=2.0.0",
    "torchio>=0.19.0",
]
ml = [
    "torch>=2.0.0",
    "monai>=1.3.0",
    "torchio>=0.19.0",
    "tcia-utils>=0.5.0",
    "scikit-learn>=1.3.0",
    "simpleitk>=2.3.0",
]

[project.urls]
Repository = "https://github.com/srdsam/radiobject"

[dependency-groups]
dev = [
    "papermill>=2.6.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E402", "E702"]
"benchmarks/assets/*.ipynb" = ["E402", "E741"]
"benchmarks/*.ipynb" = ["E402", "E741"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
